--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Nanum+Pen+Script|Noto+Sans+KR&display=swap');
+
+@font-face {
+  font-family: 'Nanum Pen Script', cursive;
+  font-family: 'Noto Sans KR', sans-serif;
+  src: url('https://fonts.googleapis.com/css?family=Nanum+Pen+Script|Noto+Sans+KR&display=swap');
+}
+
 .App {
   text-align: center;
 }
